# Secure-Linear-Regression

./: .gitignore  README.md  example.py  pyproject.toml
.github/workflows/: build.yml
src/: utils.py
src/quantizer/: quantizer.py
tests/: test_matmul.py  test_quantizer.py
